--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -17,7 +17,6 @@
             <nav>
                 <a href="/dashboard">To the Dashboard!</a>
                 <button id="logout">Log me out!</button>
-                <a href="/login">Log me in!</a>
             </nav>
         </header>
         <main>
@@ -28,7 +27,9 @@
         </footer>
     </div>
 
+    {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
+    {{/if}}
 </body>
 
 </html>
